# ARIVO

./: .env.example  .gitignore  Dockerfile  README.md  architecture_diagram.md  docker-compose.yml  pyproject.toml  requirements.txt
arivo/: __init__.py  config.py
arivo/agents/: critic.py  dossier_structuring.py  graph.py  pv_e2b.py  qms_extraction.py  regulatory_assessment.py  state.py  supervisor.py
arivo/api/: app.py  routes.py  websocket.py
arivo/data/: ema_variation_rules.json  meddra_sample.json  mock_change_controls.json  supac_rules.json
arivo/models/: assessment.py  change_control.py  dossier.py  e2b.py
arivo/tools/: dossier_templates.py  e2b_builder.py  e2b_validator.py  regulatory_rules.py  veeva_client.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: audit.html  base.html  dashboard.html  pipeline.html  review.html
tests/: smoke_test.py
