[project]
name = "arivo"
version = "0.1.0"
description = "Agentic Regulatory Intelligence & Variation Orchestrator"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.scripts]
arivo = "arivo.api.app:main"
